# alsa-oss

./: .gitignore  .hgignore  .hgtags  Makefile.am  alsa-oss.c  aoss.1  aoss.in  configure.ac  configure.in  cvscompile
alsa/: Makefile.am  alsa-local.h  alsa-oss-emul.h  alsa-oss.c  aoss.1  aoss.in  mixer.c  pcm.c  stdioemu.c  testaoss.in
oss-redir/: Makefile.am  README  oss-redir.c  oss-redir.h
test/: Makefile.am  lmixer.cc  mixctl.h  mmap_test.c  osstest.c  testaoss.in
