AC_INIT(alsa/alsa-oss.c)
AM_INIT_AUTOMAKE(alsa-oss, 1.0.3rc2)

AC_PREFIX_DEFAULT(/usr)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_LN_S 
AM_PROG_LIBTOOL

dnl Check for aoss...
AC_MSG_CHECKING(for aoss)
AC_ARG_WITH(aoss,
  [  --with-aoss=yes,no     OSS -> ALSA emulation library build],
  with_aoss="$withval", with_aoss="yes")
if test "$with_aoss" = "yes"; then
  AC_MSG_RESULT(yes)
else
  AC_MSG_RESULT(no)
fi
AM_CONDITIONAL(WITH_AOSS, test x$with_aoss = xyes)

if test "$with_aoss" = "yes"; then
  OLD_CFLAGS=$CFLAGS ; CFLAGS=""
  OLD_LDFLAGS=$LDFLAGS ; LDFLAGS=""
  OLD_LIBS=$LIBS ; LIBS=""
  AM_PATH_ALSA(0.9.0)
  ALSA_CFLAGS=$CFLAGS
  ALSA_LDFLAGS=$LDFLAGS
  ALSA_LIBS=$LIBS
  AC_SUBST(ALSA_CFLAGS)
  AC_SUBST(ALSA_LDFLAGS)
  AC_SUBST(ALSA_LIBS)
  CFLAGS=$OLD_CFLAGS
  LDFLAGS=$OLD_LDFLAGS
  LIBS=$OLD_LIBS
fi

AC_OUTPUT(Makefile alsa/Makefile alsa/aoss oss-redir/Makefile test/Makefile \
          alsa/testaoss test/testaoss)
